# ML

./: pyproject.toml
AI_Developer_Productivity/: EDA.ipynb  MLearn.ipynb
Avocado_Ripeness_Classification/: EDA.ipynb  MLearn.ipynb
Mental_Health_Problem/: LAD_Gridsearch.ipynb  MLearn.ipynb  MLearn2.ipynb  best_linear_svc_model.joblib  best_logistic_regression_model.joblib  best_sgd_classifier_model.joblib  find_best_number_of_topic.py  nlprocess.py
Mental_Health_Problem/LDA/: topics_4_best_model.model  topics_4_best_model.model.state
Mental_Health_Problem/finial_model/: dictionary.dict  lda_model.gensim  lda_model.gensim.expElogbeta.npy  lda_model.gensim.id2word  lda_model.gensim.state  logreg_elasticnet.joblib  logreg_others.joblib  sgd_elasticnet.joblib  sgd_others.joblib  svc.joblib  tfidf_model.tfidf
